---
sidebar: sidebar 
permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, bugs, limitations, known issues, enhancements, fixes' 
summary: Cloud Manager の Kubernetes の新機能をご確認ください。 
---
= Cloud Manager の Kubernetes の新機能
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Cloud Manager の Kubernetes の新機能をご確認ください。



== 2022 年 4 月 4 日



=== Cloud Manager のリソースページを使用して Kubernetes クラスタを管理

Kubernetes クラスタ管理の統合がクラスタ作業環境から直接強化されました。新しい link:https://docs.netapp.com/us-en/cloud-manager-kubernetes/task/task-k8s-quick-start.html["クイックスタート"] すぐに運用を開始できます。

クラスタリソースのページで次の操作を実行できるようになりました。

* link:https://docs.netapp.com/us-en/cloud-manager-kubernetes/task/task-k8s-manage-trident.html["Astra Trident をインストール"]
* link:https://docs.netapp.com/us-en/cloud-manager-kubernetes/task/task-k8s-manage-storage-classes.html["ストレージクラスを追加する"]
* link:https://docs.netapp.com/us-en/cloud-manager-kubernetes/task/task-k8s-manage-persistent-volumes.html["永続ボリュームを表示します"]
* link:https://docs.netapp.com/us-en/cloud-manager-kubernetes/task/task-k8s-manage-remove-cluster.html["クラスタを削除"]
* link:https://docs.netapp.com/us-en/cloud-manager-kubernetes/task/task-kubernetes-enable-services.html["データサービスを有効化"]




== 2022 年 2 月 27 日



=== Google Cloud で Kubernetes クラスタがサポートされます

Cloud Manager を使用して、 Google Cloud で管理対象 Google Kubernetes Engine （ GKE ）クラスタと自己管理型 Kubernetes クラスタを追加および管理できるようになりました。

link:https://docs.netapp.com/us-en/cloud-manager-kubernetes/requirements/kubernetes-reqs-gke.html["Google Cloud で Kubernetes クラスタを使用する方法をご確認ください"]。



== 2022 年 1 月 11 日



=== Azure で Kubernetes クラスタがサポートされます

Cloud Manager を使用して、 Azure で管理対象 Azure Kubernetes クラスタ（ AKS ）と自己管理型 Kubernetes クラスタを追加および管理できるようになりました。

link:https://docs.netapp.com/us-en/cloud-manager-kubernetes/requirements/kubernetes-reqs-aks.html["Azure での Kubernetes クラスタの使用の開始"]



== 2021 年 11 月 28 日



=== AWS での Kubernetes クラスタのサポート
