@@ -252,11 +252,6 @@
   <block id="6063d5ed0fa76ced94f0f7adbbd7b833" category="paragraph">Kubernetes クラスタがワークスペースから削除され、キャンバスに表示されなくなります。</block>
   <block id="63c24f9994279591340cd89dcb19f3cd" category="summary">管理対象の Kubernetes クラスタを Canvas に追加すると、 Cloud Manager を使用してストレージクラスを管理できるようになります。</block>
   <block id="e8b9c3a9859a62e9a58431c3b61f75d5" category="doc">ストレージクラスを管理する</block>
-  <block id="76a5809985aa691391b31d5f20c17a42" category="admonition">ストレージクラスが定義されていない場合は、「必須」の操作がクラスタに表示されます。</block>
-  <block id="8e79c25356bb563e28e9ae0a108b960b" category="list-text">最新の 4 つのバージョンの Astra Trident がインストールされていることを確認</block>
-  <block id="af1dab031c2b915817ef7d5169fdfcfb" category="list-text">Add Storage Class * をクリックして、 Kubernetes クラスタのストレージクラスを定義します。</block>
-  <block id="790a7b05e43ed5454554eef9671154f0" category="inline-image-macro">ストレージクラスの追加ボタンを示す Kubernetes リソースページのスクリーンショット</block>
-  <block id="bac110b30291a86e52ffa944c5ba6bb5" category="paragraph"><block ref="bac110b30291a86e52ffa944c5ba6bb5" category="inline-image-macro-rx" type="image"></block></block>
   <block id="6a8b915c7d54f345c01102c31e00f7e1" category="list-text">ストレージクラスの名前を指定し、定義オプションを選択して、 * 次へ * をクリックします。</block>
   <block id="26e844784a066d14af9464e1c0366829" category="inline-image-macro">Kubernetes ストレージクラスの定義オプションを示すスクリーンショット</block>
   <block id="2204d229f6006a328688918431aab2cf" category="paragraph"><block ref="2204d229f6006a328688918431aab2cf" category="inline-image-macro-rx" type="image"></block></block>
@@ -440,4 +435,11 @@
   <block id="bece28b158ab337d9ed24b00d7d02cc7" category="list-text">[ * お問い合わせ * ] をクリックして、ネットアップ・テクニカル・サポートの電話番号を検索してください。</block>
   <block id="efe81cff8e6f47ec59ef94167b76bf5a" category="list-text">[ * 問題 を開く * ] をクリックし、いずれかのオプションを選択して、 [ * 送信 * ] をクリックします。</block>
   <block id="cbb1040836732e478409dacf7e45171a" category="paragraph">ネットアップの担当者がケースを確認し、すぐに対応を開始します。</block>
+  <block id="f03623a9e2b73dcb7ae9b7b837190c39" category="section-title">2022年5月8日</block>
+  <block id="6401d12bcac1f01899ab494a0a6d8edb" category="section-title">ドラッグアンドドロップしてストレージクラスを追加します</block>
+  <block id="0f808082ee99c2acfbcb1661162034f6" category="paragraph">KubernetesクラスタをドラッグしてCloud Volumes ONTAP 作業環境にドロップし、ストレージクラスをキャンバスから直接追加できるようになりました。</block>
+  <block id="d23895cd28f2e8e5d3074279cea7aacf" category="inline-link-macro">ストレージクラスを追加します</block>
+  <block id="2556925e0b340fdd647987c6af7fbee9" category="paragraph"><block ref="2556925e0b340fdd647987c6af7fbee9" category="inline-link-macro-rx"></block></block>
+  <block id="1eec33c68401a6eebb58a392153f045b" category="admonition">ストレージクラスが定義されていない場合は、「必須」の操作がクラスタに表示されます。Canvas上のクラスタをダブルクリックすると、アクションページが開き、ストレージクラスが追加されます。</block>
+  <block id="a5cc9f7714a0767ece3c08caff06314d" category="list-text">キャンバスからKubernetes作業環境をCloud Volumes ONTAP 作業環境にドラッグアンドドロップして、ストレージクラスウィザードを開きます。</block>
 </blocks>
